Dark mode fixes; Add bg option to cards

--- a/css/global.css
+++ b/css/global.css
@@ -1,8 +1,6 @@
 .dark { color-scheme:dark; }
 .light { color-scheme:light; }
 
-[data-theme="light"], [data-theme="dark"] { color-scheme:inherit; }
-
 /* Manager overrides */
 #root > div { color-scheme:inherit;}
 .sb-bar { background-color:light-dark(#fff,#081629) !important; border-bottom:1px solid light-dark(rgba(0,0,0,0.1),rgba(255,255,255,0.2)); }
@@ -11,8 +9,6 @@
 
 /* Sidebar overrides */
 .sidebar-header a { padding:0; margin:0; }
-.dark .sidebar-header a { background:url('logo-inverted.svg') 0 0 / contain no-repeat; }
-.dark .sidebar-header a img { opacity:0; }
 #storybook-explorer-menu .sidebar-item a,
 #storybook-explorer-menu .sidebar-item button { color:light-dark(#333,#fff); }
 
@@ -34,8 +30,6 @@
 .sb-section-title { border-bottom:1px solid light-dark(var(--gray-extra-light),var(--brand-blue-light)); padding-bottom:1em; margin-bottom:3em; }
 .sbdocs-wrapper .sbdocs-a { color:light-dark(var(--link-blue), var(--brand-gold-light)); }
 .sbdocs-wrapper .sbdocs-a:hover, .sbdocs-wrapper .sbdocs-a:focus { color:light-dark(var(--brand-blue-bright), var(--brand-gold-bright)); }
-
-.docs-story > div {}
 
 .code-example { margin-block-end:2rem; padding:2rem; border:1px solid light-dark(var(--gray-extra-light),var(--brand-blue-light)); }
 .code-example:has( + pre ) { border-bottom:0; }
